# web-08

./: pyproject.toml
task_1/: main.py  models.py  seed.py
task_2/: consumer.py  models.py  producer.py
