[project]
name = "goit-pyweb-hw-08"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mongoengine (>=0.29.1,<0.30.0)",
    "redis (>=5.2.1,<6.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "faker (>=36.1.1,<37.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
